updated website copy, added social and github links

--- a/website/index.html
+++ b/website/index.html
@@ -58,6 +58,9 @@
                         <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
                             <ul class="costomer">
                                 <li>Zilliqa <a href="https://viewblock.io/zilliqa/address/zil1820sqx2fx3j4mw6reh8h0vc6nerndz5vv0a3h0"><span>Contract Address </span>zil1820sqx2fx3j4mw6reh8h0vc6nerndz5vv0a3h0</a></li>
+                                <li>Arky <a href="https://zilswap.io/arky/collections/zil17kd0k6k37xe9rjgq0lvu6dvx8awyelhd9vv4ch" target="_blank"><span>NFT collection </span>zil17kd0k6k37xe9rjgq0lvu6dvx8awyelhd9vv4ch</a></li>
+                                <li>Telegram <a href="https://t.me/thethousandtoken" target="_blank"><span>Group</span></a></li>
+                                <li>Github <a href="https://github.com/TheThousandToken" target="_blank"><span>Repositories</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -73,7 +76,7 @@
                             <div class="text-bg">
                                 <span>TheThousand</span>
                                 <h1>THOU</h1>
-                                <p>TheThousand, THOU art verily a meme token on yon Zilliqa blockchain.</p>
+                                <p>TheThousand, THOU art verily a fungible meme token on yon Zilliqa blockchain, as well as a collection of 1,000 unique NFTs listed on Arky.</p>
                                 <a href="https://zilswap.io/swap?tokenIn=zil1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq9yf6pz&tokenOut=zil1820sqx2fx3j4mw6reh8h0vc6nerndz5vv0a3h0">Thou art unworthy to possess THOU</a>
                             </div>
                         </div>
@@ -162,7 +165,7 @@
                             <div class="container">
                                 <div class="carousel-caption">
                                     <figure><img src="banner5.png" alt="#" /></figure>
-                                    <p>THOU shalt highly likely be the one and only Zil token deployed by its creator, for alas ease of token deployment sucks.</p>
+                                    <p>THOU was intended to be a solo meme token, yet it now has a companion NFT collection.</p>
 
                                 </div>
                             </div>
@@ -252,7 +255,7 @@
                            Does the THOU token have some project planned?</a>
                                 </div>
                                 <div class="content">
-                                    <p> Verily I say unto thee; no.
+                                    <p> At first we didn't but then we ended up enjoying making an NFT collection. More series are planned.
                                     </p>
                                 </div>
                             </div>
@@ -283,6 +286,7 @@
                                         a zil wallet. 90% will be redeployed. They were liquidity pooled on zilswap but we were effectively hidden there, and we didn't get a zilstream listing and there's no reason to just let it sit there if nobody's
                                         going to know it's there. We will be discussing among the three of us how best to distribute them.
                                     </p>
+                                    <p> Update on that front. We decided to put them back into liquidity pooling following the creation of our <a href="https://zilswap.io/arky/collections/zil17kd0k6k37xe9rjgq0lvu6dvx8awyelhd9vv4ch" target="_blank">NFT collection.</a></p>
                                 </div>
                             </div>
                         </div>
